# Python-Databases-Linkedin-Course

./: main.py  pyproject.toml
02_SQLite/: 02.py  03.py  04.py  05.py  08.py  09.py  10.py  movies.db  users.db
03_MySQL/: 05.py  06.py  07.py  11.py
03_MySQL/challenge/: main.py
03_MySQL/challenge/db/: database.py  model.py  sales.py
03_MySQL/db/: connection.py  crud.py
