[project]
name = "python-databases-linkedin-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mysql-connector-python>=9.5.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
]
